third_party/move/move-compiler-v2/tests/checking/specs/behavior_predicates_err.exp

Diagnostics:
error: global resource access expected
   ┌─ tests/checking/specs/behavior_predicates_err.move:24:18
   │
24 │         modifies modifies_of<f>(x);
   │                  ^^^^^^^^^^^^^^^^^
